# cable

./: CMakeLists.txt  README.md
CMake/: uninstall.cmake
libcable/: CMakeLists.txt
libcable/include/cable/: core.h  math.h  porting.h  test.h
libcable/include/cable/core/: allocator.h  array.h  data.h  error.h  map.h  object.h  scalar.h  set.h  stream.h  string.h  test.h
libcable/include/cable/math/: 2d.h  4f.h  mat2d.h  mat4f.h
libcable/include/cable/math/scalar/: 2d.h  4f.h
libcable/include/cable/math/simd/: 2d.h  4f.h
libcable/src/: test.c
libcable/src/core/: allocator.c  array.c  data.c  error.c  map.c  object.c  scalar.c  set.c  stream.c  string.c  test.c
libcable/tst/: CMakeLists.txt
libcable/tst/core/: allocator.c  stream.c  test.c
